Update : added a path to the DirectoryInfo, removed unwanted plugins